--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 markers =
     integration: mark a test as an integration test that requires external resources (DB, network)
+addopts = -m "not integration"
