Coba implementasi ada error CORS

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # WhatsApp API Configuration
-STARSENDER_API_KEY=your_starsender_api_key_here
+STARSENDER_API_KEY=8891e7c9-ecd7-4f2e-8502-97b3ea756b45
 
 # Database Configuration
-DATABASE_URL=postgresql+psycopg2://username:password@localhost:5432/database_name
+DATABASE_URL=postgresql+psycopg2://santri2026:Santri2026J0$$@103.127.136.22:5432/bengkel
